@@ -57,7 +57,14 @@ android {
     compose = true
     buildConfig = true
   }
-  testOptions { unitTests { isIncludeAndroidResources = true } }
+  testOptions { 
+    unitTests { 
+      isIncludeAndroidResources = true 
+      all {
+        it.jvmArgs("-XX:+EnableDynamicAgentLoading")
+      }
+    } 
+  }
 }
 
 // Configure the Secrets Gradle Plugin to use .env and .env.example files
